Add menu with search and home pages

--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -2,8 +2,7 @@
   <ion-content>
     <div class="card">
       <div class="item item-text-wrap">
-        Welcome to the Ulabox Music application, start searching
-        for music!
+        This is the search page you have to implement!
       </div>
     </div>
   </ion-content>
