--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -3,6 +3,16 @@
     <div class="card">
       <div class="item item-text-wrap">
         This is the search page you have to implement!
+
+        <input type="text" ng-model="song" ng-keyUp="search(song)">
+
+        <ion-list>
+            <ion-item ng-repeat="result in results">
+              {{result.name()}}
+              {{result.artist()}}
+              <img ng-src="{{result.imageUrl()}}" alt="Description" />
+            </ion-item>
+        </ion-list>
       </div>
     </div>
   </ion-content>
